--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,8 @@
   </properties>
 
   <dependencies>
-    
+
+ 
     
     <!-- https://mvnrepository.com/artifact/org.testng/testng -->
 	<dependency>
@@ -52,7 +53,19 @@
 	    <artifactId>poi-ooxml</artifactId>
 	    <version>4.1.0</version>
 	</dependency>
+
+	<!-- https://mvnrepository.com/artifact/log4j/log4j -->
+	<dependency>
+	    <groupId>log4j</groupId>
+	    <artifactId>log4j</artifactId>
+	    <version>1.2.17</version>
+	</dependency>
+
 	
     
+
+	
+    
+
   </dependencies>
 </project>
